--- a/frontend/src/components/heuristicsMenu/HeuristicsMenu.css
+++ b/frontend/src/components/heuristicsMenu/HeuristicsMenu.css
@@ -1,4 +1,4 @@
-.button {
+/* .sel {
     all: unset;
     align-items: center;
     border: 1px solid;
@@ -26,7 +26,7 @@
     position: relative;
     white-space: nowrap;
     width: fit-content;
-  }
+  } */
   
   .button .vuesax-linear-arrow {
     height: 20px !important;
