--- a/frontend/src/pages/homePage/HomePage.css
+++ b/frontend/src/pages/homePage/HomePage.css
@@ -10,7 +10,10 @@
 }
 
 .grid-container-homepage {
+    display: flex;
+    flex-direction: column;
     width: 90%;
+    gap: 24px;
 }
 
 .side-menu-homepage {
