--- a/frontend/src/pages/homePage/HomePage.css
+++ b/frontend/src/pages/homePage/HomePage.css
@@ -36,12 +36,12 @@
     margin-top: 16px;
 }
 
-.generate-obstacles-buttons-container {
+/* .generate-obstacles-buttons-container {
     display: flex;
     flex-direction: column;
     margin-top: 24px;
     gap: 16px;
-}
+} */
 
 .text-fields-container-homepage {
     width: 268px;
