--- a/frontend/src/components/animationStepSlider/AnimationSpeedSlider.css
+++ b/frontend/src/components/animationStepSlider/AnimationSpeedSlider.css
@@ -1,8 +1,13 @@
+.animation-speed-slider-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
 
   .slider-label {
     color: #f7f8f9;
     font-family: "Actor-Regular", Helvetica;
-    font-size: 22px;
+    font-size: 21px;
     font-weight: 400;
     line-height: normal;
     margin-bottom: 15px;
