--- a/frontend/src/components/clearGridButton/ClearGridButton.css
+++ b/frontend/src/components/clearGridButton/ClearGridButton.css
@@ -1,10 +1,11 @@
-.start-button-container {
+.clear-button-container {
     display: flex;
     justify-content: center;
     margin-top: 20px; 
+    
 }
 
-.start-button {
+.clear-button {
     display: flex;
     align-items: center;
     justify-content: center;
