style: :lipstick: Small style change to test the auto gen of changelog
Small style change to test the auto gen of changelog

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -21,10 +21,14 @@
   cursor: pointer;
 }
 
+.navbar-logo:hover {
+  transform: scale(1.03);
+}
+
 .navbar-links {
-  position: absolute; 
+  position: absolute;
   left: 50%;
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
   color: white;
 }
 
