--- a/frontend/src/pages/homePage/HomePage.css
+++ b/frontend/src/pages/homePage/HomePage.css
@@ -14,6 +14,7 @@
     .outer-container-homepage {
         flex-direction: column;
         overflow: auto;
+        align-items: center;
     }
 }
 
