style: :lipstick: Made Navbar-styling cooler by adding animated lines under the page-selectors.
#87

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -33,13 +33,31 @@
 }
 
 .navbar-links a {
+  position: relative;
   margin: 0 1rem;
   text-decoration: none;
   color: inherit;
   font-size: 1.2rem;
-  /* background-color: green; */
 }
 
-.navbar-links a:hover {
-  text-decoration: underline;
+.navbar-links a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: white;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar-links a:hover::after {
+  transform: scaleX(1);
+}
+
+.navbar-links a.active::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
