style: :lipstick: Shrink size of multiple items in sidemenu so they fit inside the screen on 100% zoom in Google Chrome.

--- a/frontend/src/components/mapFileHandler/MapFileHandler.css
+++ b/frontend/src/components/mapFileHandler/MapFileHandler.css
@@ -3,12 +3,13 @@
     flex-direction: column;
     width: 268px;
     gap: 14px;
+    /* background-color: red; */
 }
 
 .download-upload-text {
     color: #f7f8f9;
     font-family: "Actor-Regular", Helvetica;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
     line-height: normal;
 }
